# extension-cpp

./: BUILD.md  CMakeLists.txt
examples/: CMakeLists.txt  fast_sigmoid_cpp_test.cpp
extension_cpp/: ops.py
extension_cpp/csrc/: CMakeLists.txt  fast_sigmoid.cpp
extension_cpp/csrc/cmake/: fast_sigmoid_config.cmake.in
extension_cpp/csrc/include/extension_cpp/: fast_sigmoid.h
external_app_demo/: CMakeLists.txt  main.cpp
test/fast_sigmoid/: fast_sigmoid_cpp_test.cpp  test_fast_sigmoid.py
train/: train_fast_sigmoid.py
utils/: lru_cache.h
